src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is the outstanding balance that a pub owes to MB (which may be negative).</description>
        <inlineHelpText>This is the outstanding balance that a pub owes to MB (which may be negative).</inlineHelpText>
        <label>Current Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Discount__c</fullName>
        <description>The percentage discount a pub receives when purchasing beverages.  This discount is not required, but if specified, overrides the default discount and applies only this pub.</description>
        <inlineHelpText>The percentage discount a pub receives when purchasing beverages.  This discount is not required, but if specified, overrides the default discount and applies only this pub.</inlineHelpText>
        <label>Purchase Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sale_Discount__c</fullName>
        <description>The percentage discount Micro Beverage receives when purchasing beverages from this pub.  This discount is not required, but if specified, overrides the default sale discount and applies only this pub.</description>
        <inlineHelpText>The percentage discount Micro Beverage receives when purchasing beverages from this pub.  This discount is not required, but if specified, overrides the default sale discount and applies only this pub.</inlineHelpText>
        <label>Sale Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Purchase_Discount__c</columns>
        <columns>Sale_Discount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Pubs</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>